Use Arrays.asList instead.